Working real-time graphing capability. Working on site design.

--- a/index.html
+++ b/index.html
@@ -3,23 +3,29 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Web Graph Serial</title>
-
+    <link href="css/style.css" rel="stylesheet">
 		<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
 	</head>
 
   <body>
+    <header>
+      <div id="head_cont">
+        <h1>Web Graph Serial!</h1>
+        <span id="startStop">Start Charting</span>
+      </div>
+    </header>
 
+    <div id="container">
 
-    <div class="container">
+      <div id="graph_data"</div>
 
-      <h1>Web Graph Serial</h1>
-      <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
+      <div id="console_data"></div>
+      <div id="send_data"></div>
 
     </div> <!-- /container -->
     
-    <div id="data_container" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
 
     <!-- Le javascript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
